feat: add language selection feature in sidebar, enhance property columns with optional fields handling, and update translations for country input

--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -845,6 +845,10 @@
       "pt": "Erro ao excluir imóvel"
     },
     "inputs": {
+      "country": {
+        "en": "Country",
+        "pt": "País"
+      },
       "fraction": {
         "en": "Fraction",
         "pt": "Fração"
