--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -95,6 +95,10 @@
     "processing": {
       "en": "Processing...",
       "pt": "Processando..."
+    },
+    "errorCreatingContract": {
+      "en": "An error occurred while creating the contract. Please try again.",
+      "pt": "Ocorreu um erro ao criar o contrato. Por favor, tente novamente."
     }
   },
   "sidebar": {
@@ -335,6 +339,10 @@
             "name": {
               "en": "Name",
               "pt": "Nome"
+            },
+            "gender": {
+              "en": "Gender",
+              "pt": "Género"
             },
             "marriedUnderRegime": {
               "en": "Married under the regime of",
